--- a/index.html
+++ b/index.html
@@ -15,7 +15,46 @@
     <title>BWA Tiketsaya</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav
+      class="navbar-expand-lg navbar-light navbar-store fixed-top navbar-fixed-top"
+      data-aos="fade-down"
+    >
+      <div class="container">
+        <a href="index.html" class="navbar-brand">
+          <img src="images/logo.svg" alt="logo" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="categories.html" class="nav-link">Categories</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Rewards</a>
+          </li>
+          <li class="nav-item">
+            <a href="register.html" class="nav-link">Sign Up</a>
+          </li>
+          <li class="nav-item">
+            <a
+              href="login.html"
+              class="btn btn-success nav-link px-4 text-white"
+              >Sign In</a
+            >
+          </li>
+        </ul>
+        <div class="collapse navbar-collapse" id="navbarResponsive"></div>
+      </div>
+    </nav>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
