--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
     <div class="container">
       <div class="row header-sign-in">
         <div class="col-12">
-          <img height="80" src="images/applogocolored.png" alt="" />
+          <img
+            class="logo-header"
+            height="80"
+            src="images/applogocolored.png"
+            alt=""
+          />
         </div>
+      </div>
+      <div class="row form-sign-in">
+        <div class="col-12"></div>
       </div>
     </div>
 
