--- a/index.html
+++ b/index.html
@@ -28,7 +28,57 @@
         </div>
       </div>
       <div class="row form-sign-in">
-        <div class="col-12"></div>
+        <div class="col-12">
+          <div class="row">
+            <div class="col-6">
+              <img
+                class="icon-header"
+                height="278"
+                src="images/illustration_login.png"
+                alt=""
+                srcset=""
+              />
+            </div>
+
+            <div class="col-4">
+              <p class="title-form">Sign In</p>
+              <p class="subtitle-form">Let's make a report today</p>
+              <form>
+                <div class="mb-3 content-sign-in">
+                  <label
+                    for="exampleInputName1"
+                    class="form-label title-input-type-primary-tiketsaya"
+                    >User Name</label
+                  >
+                  <input
+                    type="username"
+                    class="form-control input-type-primary-tiketsaya"
+                    id="exampleInputName1"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label
+                    for="exampleInputPassword1"
+                    class="form-label title-input-type-primary-tiketsaya"
+                    >Password</label
+                  >
+                  <input
+                    type="password"
+                    class="form-control input-type-primary-tiketsaya"
+                    id="exampleInputPassword1"
+                  />
+                </div>
+
+                <button
+                  type="submit"
+                  class="btn btn-primary btn-primary-tiketsaya"
+                >
+                  Sign In
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
