--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <div class="row header-sign-in">
-        <div class="col-12">
+        <div class="col-md-12">
           <img
             class="logo-header"
             height="80"
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="row form-sign-in">
-        <div class="col-12">
+        <div class="col-md-10 offset-md-1">
           <div class="row">
             <div class="col-6">
               <img
