--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           />
         </div>
       </div>
-      <div class="row form-sign-in">
-        <div class="col-md-10 offset-md-1">
+      <div class="row">
+        <div class="col-md-10 offset-md-1 form-sign-in">
           <div class="row">
             <div class="col-6">
               <img
