responsive icon-header

--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
       <div class="row">
         <div class="col-md-10 offset-md-1 form-sign-in">
           <div class="row">
-            <div class="col-6">
+            <div class="col-md-6 d-none d-sm-block">
               <img
                 class="icon-header"
                 height="278"
-                src="images/illustration_login.png"
+                src="images/illustration_login.png "
                 alt=""
                 srcset=""
               />
             </div>
 
-            <div class="col-4">
+            <div class="col-md-4">
               <p class="title-form">Sign In</p>
               <p class="subtitle-form">Let's make a report today</p>
               <form>
