--- a/dashboard.html
+++ b/dashboard.html
@@ -17,11 +17,49 @@
   </head>
   <body>
     <div class="side-left">
-      <div class="shortcut"></div>
+      <div class="shortcut">
+        <div class="emblemapp">
+          <img height="29" src="images/emblemapp.png" alt="emblem app" />
+        </div>
+        <div class="menus">
+          <div class="item-menu">
+            <p class="icon-item-menu">
+              <i class="fa-brands fa-delicious"></i>
+            </p>
+          </div>
+
+          <div class="item-menu">
+            <p class="icon-item-menu">
+              <i class="fa-solid fa-ticket"></i>
+            </p>
+          </div>
+
+          <div class="item-menu">
+            <p class="icon-item-menu">
+              <i class="fa-solid fa-user"></i>
+            </p>
+          </div>
+          <div class="item-menu">
+            <p class="icon-item-menu">
+              <i class="fa-solid fa-gear"></i>
+            </p>
+          </div>
+
+          <div class="item-menu">
+            <p class="icon-item-menu">
+              <i class="fa-solid fa-power-off"></i>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/b6c09bc73f.js"
       crossorigin="anonymous"
     ></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
