--- a/dashboard.html
+++ b/dashboard.html
@@ -23,32 +23,49 @@
         </div>
         <div class="menus">
           <div class="item-menu">
-            <p class="icon-item-menu">
-              <i class="fa-brands fa-delicious"></i>
-            </p>
+            <a href="dashboard.html">
+              <p class="icon-item-menu">
+                <i class="fa-brands fa-delicious"></i>
+              </p>
+            </a>
           </div>
 
-          <div class="item-menu">
-            <p class="icon-item-menu">
-              <i class="fa-solid fa-ticket"></i>
-            </p>
+          <div class="item-menu inactive">
+            <a href="sales.html">
+              <p class="icon-item-menu">
+                <i class="fa-solid fa-ticket"></i>
+              </p>
+            </a>
           </div>
 
-          <div class="item-menu">
-            <p class="icon-item-menu">
-              <i class="fa-solid fa-user"></i>
-            </p>
-          </div>
-          <div class="item-menu">
-            <p class="icon-item-menu">
-              <i class="fa-solid fa-gear"></i>
-            </p>
+          <div class="item-menu inactive">
+            <a href="wisata.html">
+              <p class="icon-item-menu">
+                <i class="fa-solid fa-map-location-dot"></i>
+              </p>
+            </a>
           </div>
 
-          <div class="item-menu">
-            <p class="icon-item-menu">
-              <i class="fa-solid fa-power-off"></i>
-            </p>
+          <div class="item-menu inactive">
+            <a href="customer.html">
+              <p class="icon-item-menu">
+                <i class="fa-solid fa-user"></i>
+              </p>
+            </a>
+          </div>
+          <div class="item-menu inactive">
+            <a href="setting.html"
+              ><p class="icon-item-menu">
+                <i class="fa-solid fa-gear"></i></p
+            ></a>
+          </div>
+
+          <div class="item-menu inactive">
+            <a href="#">
+              <p class="icon-item-menu">
+                <i class="fa-solid fa-power-off"></i>
+              </p>
+            </a>
           </div>
         </div>
       </div>
