--- a/dashboard.html
+++ b/dashboard.html
@@ -69,6 +69,8 @@
           </div>
         </div>
       </div>
+
+      <div class="admin-profile">ini admin-profile</div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
