show and hide admin profile

--- a/dashboard.html
+++ b/dashboard.html
@@ -16,8 +16,12 @@
     <title>Dashboard Tiketsaya</title>
   </head>
   <body>
-    <div class="side-left" onmouseout="hideAdminProfile()">
-      <div class="shortcut" onmouseover="showAdminProfile()">
+    <div
+      class="side-left"
+      onmouseover="showAdminProfile()"
+      onmouseout="hideAdminProfile()"
+    >
+      <div class="shortcut">
         <div class="emblemapp">
           <img height="29" src="images/emblemapp.png" alt="emblem app" />
         </div>
