show and hide admin profile

--- a/dashboard.html
+++ b/dashboard.html
@@ -84,7 +84,12 @@
           <li class="active-link"><a href="dashboard.html">My Dashboard</a></li>
           <li><a href="sales.html">Ticket Sales</a></li>
           <li><a href="wisata.html">My Trip</a></li>
-          <li><a href="customer.html">Customers</a></li>
+          <li>
+            <a href="customer.html"
+              >Customers
+              <span class="badge-tiketsaya badge rounded-pill">196</span></a
+            >
+          </li>
           <li><a href="settings.html">Settings</a></li>
           <li><a href="#">Log Out</a></li>
         </ul>
